src/main/java/syntactic/test/passing/assignArrayElemment.ru
start {
    x = test[1];
}