src/main/java/syntactic/test/failing/declarationOfNoAType.ru
struct A {
	noAType x;
}

start {
}
